--- a/제로초 인강/1-3,4강.html
+++ b/제로초 인강/1-3,4강.html
@@ -6,12 +6,22 @@
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
     <title>NAVER</title>
     <style>
+        #html, body {
+            margin: 0;
+            padding: 0;
+        }
         #wrap {
             text-align: center;
         }
         #wrap-center {
             width: 1280px;
             background-color: yellow;
+        #header-hamburger {
+            margin-top: 18px;
+            background-color: blue;
+            width: 46px;
+            height: 46px;
+        }
         }
         #main {
             height: 2000px;
@@ -21,7 +31,10 @@
 <body>
     <div id="wrap">
         <div id="wrap-center" style="display: inline-block">
-            <div id="haeder"></div>
+            <div id="header"></div>
+                <div id="header-hamburger">
+
+                </div>
             <div id="search"></div>
             <div id="nav"></div>
             <div id="main"></div>
