--- a/제로초 인강/1-3,4강.html
+++ b/제로초 인강/1-3,4강.html
@@ -15,13 +15,25 @@
         }
         #wrap-center {
             width: 1280px;
+            display: inline-block;
             background-color: yellow;
+        }
+        #header {
+            text-align: left;
+
+        }
         #header-hamburger {
             margin-top: 18px;
-            background-color: blue;
+            padding: 10px;
+            display: inline-block;
+        }
+        #header-hamburger > div {
+            background-image: url(./sp_main.png);
             width: 46px;
             height: 46px;
-        }
+            background-repeat: no-repeat;
+            background-size: 452px 436px;
+            background-position: -311px -166px;
         }
         #main {
             height: 2000px;
@@ -30,11 +42,12 @@
 </head>
 <body>
     <div id="wrap">
-        <div id="wrap-center" style="display: inline-block">
-            <div id="header"></div>
+        <div id="wrap-center">
+            <div id="header">
                 <div id="header-hamburger">
-
+                    <div></div>
                 </div>
+            </div>
             <div id="search"></div>
             <div id="nav"></div>
             <div id="main"></div>
