--- a/제로초 인강/1-3,4강.html
+++ b/제로초 인강/1-3,4강.html
@@ -72,10 +72,12 @@
         }
         #header {
             text-align: left;
-
+            position: relative;
         }
         #header-hamburger {
-            margin-top: 18px;
+            position: absolute;
+            top: 18px;
+            left: -10px;
             padding: 10px;
             display: inline-block;
             background: none;
@@ -83,8 +85,14 @@
             cursor: pointer;
         }
         #header-hamburger:hover {
+            content: '';
             background-color: var(--color_option_bg);
-            border-radius: 50%;
+            border-radius: 50%;            
+            padding: 9px;
+        }
+        #header-hamburger:hover > div {
+            position: relative;
+            left: 1px;
         }
         #header-hamburger > div {
             background-image: url(./sp_main.png);
