--- a/제로초 인강/1-3,4강.html
+++ b/제로초 인강/1-3,4강.html
@@ -84,16 +84,20 @@
             border: none;
             cursor: pointer;
         }
-        #header-hamburger:hover {
+
+
+        #header-hamburger:hover::before {
+            position: absolute;
             content: '';
+            left: 1px;
+            top: 1px;
+            width: 44px;
+            height: 44px;
+
             background-color: var(--color_option_bg);
             border-radius: 50%;            
-            padding: 9px;
         }
-        #header-hamburger:hover > div {
-            position: relative;
-            left: 1px;
-        }
+
         #header-hamburger > div {
             background-image: url(./sp_main.png);
             width: 32px;
