--- a/제로초 인강/1-3,4강.html
+++ b/제로초 인강/1-3,4강.html
@@ -89,6 +89,7 @@
         #header-hamburger:hover::before {
             position: absolute;
             content: '';
+            z-index: 0;
             left: 1px;
             top: 1px;
             width: 44px;
@@ -100,8 +101,12 @@
 
         #header-hamburger > div {
             background-image: url(./sp_main.png);
-            width: 32px;
-            height: 32px;
+            z-index: 1;
+            position: relative;
+            left: -2;
+            top: -2;
+            width: 26px;
+            height: 26px;
             background-repeat: no-repeat;
             background-size: 452px 436px;
             background-position: -311px -166px;
@@ -117,7 +122,9 @@
         <div id="wrap-center">
             <div id="header">
                 <button id="header-hamburger">
+                    <!--::before-->
                     <div></div>
+                    <!--::after-->
                 </button>
             </div>
             <div id="search"></div>
