--- a/제로초 인강/1-3,4강.html
+++ b/제로초 인강/1-3,4강.html
@@ -64,10 +64,11 @@
         }
 
 
-        #html, body {
+        #html, body, form {
             margin: 0;
             padding: 0;
         }
+
         #wrap {
             text-align: center;
         }
@@ -79,6 +80,7 @@
         #header {
             text-align: left;
             position: relative;
+            height: 64px;
         }
 
         #header-hamburger,#header-navertalk,#header-notice, #header-cart {
@@ -158,6 +160,7 @@
             margin: -1px;
             overflow: hidden;            
         }
+
     </style>
 </head>
 <body>
@@ -189,7 +192,31 @@
                     <!--::after-->
                 </button>
             </div>
-            <div id="search"></div>
+
+            <style>
+                #search > form {
+                    display: inline-block;
+                    width: 708px;
+                    height: 60px;
+                    border: 1px solid #03c75a;
+                    border-radius: 33px;
+                    text-align: left;
+                }
+                #search > form > input {
+                    width: 480px;
+                    height: 100%;
+                    padding: 17px 0;
+                    border: none;
+                    outline: none;
+                }
+            </style>
+            <div id="search">
+                <form action="">
+                    <label for="search-input" class="blind">검색어 입력</label>
+                    <input type="search-input" type="text" />
+                    <button class="blind">검색</button>
+                </form>
+            </div>
             <div id="nav"></div>
             <div id="main"></div>
         </div>
