--- a/제로초 인강/네이버클론코딩.html
+++ b/제로초 인강/네이버클론코딩.html
@@ -202,19 +202,70 @@
                     border-radius: 33px;
                     text-align: left;
                 }
-                #search > form > input {
-                    width: 480px;
-                    height: 100%;
+                #search-input {
+                    width: 100%;
+                    height: 58px;
+                    color: var(--color_search);
+                    z-index: 10;
+                    position: relative;
                     padding: 17px 0;
+                    background-color: rgba(255, 255, 255, 0);
+                    -webkit-box-sizing: border-box;
+                    box-sizing: border-box;
+                    font-size: 1.3rem;
+                    line-height: 24px;
+                    font-weight: bold;
+                    outline: 0;
+                    left: 20;
                     border: none;
-                    outline: none;
+                }
+                #search-keyboard::before {
+                    content: "";
+                    display: block;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.eae24523.png);
+                    background-size: 452px 436px;
+                    background-position: -148px -301px;
+                    background-repeat: no-repeat;
+                    width: 24px;
+                    height: 14px;
+                }
+                #search-recent::before {
+                    content: "";
+                    display: block;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.eae24523.png);
+                    background-size: 452px 436px;
+                    background-position: -154px -211px;
+                    background-repeat: no-repeat;
+                    width: 10px;
+                    height: 6px;
+                }
+                #search-button::before {
+                    content: "";
+                    display: block;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.eae24523.png);
+                    background-size: 452px 436px;
+                    background-position: -405px -79px;
+                    background-repeat: no-repeat;
+                    width: 25px;
+                    height: 25px;
                 }
             </style>
             <div id="search">
                 <form action="">
                     <label for="search-input" class="blind">검색어 입력</label>
-                    <input type="search-input" type="text" />
-                    <button class="blind">검색</button>
+                    <input id="search-input" type="text" placeholder="검색어를 입력하세요."/>
+                    <div id="search-right">
+                        <button href="#" id="search-keyboard">
+                            <span class="blind">입력도구</span>
+                        </button>
+                        <button href="#" id="search-recent">
+                            <span class="blind">자동완성/최근검색어필치기</span>
+                        </button>
+                        <button id="search-button">
+                            <div><span class="blind">검색</span></div>
+                        </button>
+                    </div>
+
                 </form>
             </div>
             <div id="nav"></div>
