--- a/제로초 인강/네이버클론코딩.html
+++ b/제로초 인강/네이버클론코딩.html
@@ -195,13 +195,26 @@
 
             <style>
                 #search > form {
-                    display: inline-block;
+                    display: inline-flex;
                     width: 708px;
                     height: 60px;
                     border: 1px solid #03c75a;
                     border-radius: 33px;
                     text-align: left;
                 }
+
+                #search-right {
+                    display: flex;
+                    align-items: stretch;
+                    margin-right: 10px;
+                }
+
+                #search-keyboard, #search-recent, #search-button {
+                    background: transparent;
+                    border: none;
+                    cursor: pointer;
+                }
+
                 #search-input {
                     width: 100%;
                     height: 58px;
