--- a/제로초 인강/네이버클론코딩.html
+++ b/제로초 인강/네이버클론코딩.html
@@ -75,7 +75,7 @@
         #wrap-center {
             width: 1280px;
             display: inline-block;
-            background-color: yellow;
+            background-color: none;           ;
         }
         #header {
             text-align: left;
@@ -202,7 +202,15 @@
                     border-radius: 33px;
                     text-align: left;
                 }
-
+                #search > form:hover {
+                    box-shadow: 0 2px 4px 0 rgba(0,0,0, .12);
+                }
+                #search-input::placeholder {
+                    color: white;
+                }
+                #search-input:focus::placeholder {
+                    color: #e4e4e4;
+                }
                 #search-right {
                     display: flex;
                     align-items: stretch;
@@ -225,7 +233,7 @@
                     background-color: rgba(255, 255, 255, 0);
                     -webkit-box-sizing: border-box;
                     box-sizing: border-box;
-                    font-size: 1.3rem;
+                    font-size: 1.5rem;
                     line-height: 24px;
                     font-weight: bold;
                     outline: 0;
@@ -242,6 +250,9 @@
                     width: 24px;
                     height: 14px;
                 }
+                #search-keyboard:hover::before {
+                    filter: brightness(0.7);
+                }
                 #search-recent::before {
                     content: "";
                     display: block;
@@ -252,7 +263,16 @@
                     width: 10px;
                     height: 6px;
                 }
-                #search-button::before {
+                #search-button {
+                    padding: 17px 27px 16px 10px;
+                }
+                #search-button >div {
+                    background: #03c75a;
+                    width: 25px;
+                    height: 25px;
+
+                }
+                #search-button > div::before {
                     content: "";
                     display: block;
                     background-image: url(https://pm.pstatic.net/resources/asset/sp_main.eae24523.png);
