--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -331,7 +331,6 @@
                             <div><span class="blind">검색</span></div>
                         </button>
                     </div>
-
                 </form>
             </div>
 
@@ -340,26 +339,104 @@
                     display: flex;
                     list-style-type: none;
                     justify-content: center;
+                    font-size: 0.9rem;
                     line-height: 20px;
-                    font-size: 1rem;
-
+                    margin-top: 10px;
                 }
+
                 #nav a {
                     text-decoration: none;
+                    text-align: center;
                 }
-                #nav :visited {
+
+                #nav a div {
+                    position: relative;
+                }
+
+                #nav a div::after {
+                    z-index: 1;
+                    position: relative;
+                    content: '';
+                    margin: 2px;
+                    display: inline-block;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.b27083b1.png);
+                    background-size: 463px 440px;
+                    background-position: -205px -219px;
+                    background-repeat: no-repeat;
+                    width: 40px;
+                    height: 40px;
+                }
+
+                #nav a:visited {
                     color: black;
                 }
+
                 #nav li {
                     width: 64px;
                     margin-left: 4px;
+                    display: flex;
+                    justify-content: center;
                 }
-                #nav li:nth-of-type(1) {
+
+                #nav li:nth-of-type(1){
                     margin-left: 0;
                 }
-                #nav li:nth-of-type(2) {
 
+                #nav li a div::before {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    top: -1px;
+                    left: -3px;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.b27083b1.png);
+                    background-size: 463px 440px;
+                    background-position: -153px -142px;
+                    background-repeat: no-repeat;
+                    width: 50px;
+                    height: 50px;
                 }
+
+                #nav li:nth-of-type(2) a div::after{
+                    background-position: -41px -219px;
+                }
+
+                #nav li:nth-of-type(3) a div::after{
+                    background-position: 0px -219px;
+                }
+
+                #nav li:nth-of-type(4) a div::after{
+                    background-position: -41px -260px;
+                }
+
+                #nav li:nth-of-type(5) a div::after{
+                    background-position: -270px -205px;
+                }
+
+                #nav li:nth-of-type(6) a div::after{
+                    background-position: -123px -260px;
+                }
+
+                #nav li:nth-of-type(7) a div::after{
+                    background-position: 0px -260px;
+                }
+
+                #nav li:nth-of-type(8) a div::after{
+                    background-position: -270px 0px;
+                }
+
+                #nav li:nth-of-type(9) a div::after{
+                    background-position: -164px -260px;
+                }
+
+                #nav li:nth-of-type(10) a div::after{
+                    background-position: -270px -164px;
+                }
+
+                #nav li a span{
+                    display: inline-block;
+                    margin-top: 7px;
+                }
+                
             </style>
 
             <div id="nav">
@@ -385,7 +462,7 @@
                     <li>
                         <a href="">
                             <div></div>
-                            <span>쇼핑</span>
+                            <span>스토어</span>
                         </a>
                     </li>
                     <li>
