--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -540,9 +540,9 @@
                     height: 560px;
 
                 }
-                #main-newstand {
-                    height: 426px;
-                }
+
+
+
                 #main-login {
                     height: 164px;
                     padding: 21px 20px 18px;
@@ -622,12 +622,94 @@
                 #main-stock  {
                     height: 236px;
                 }
+                #main-newstand {
+                    height: 426px;
+                }
+                #main-newstand a {
+                    text-decoration: none;
+                }
+                #main-newstand a:visited {
+                    color: inherit;
+                }
+
+                #main-newstand a  :hover{
+                    text-decoration: underline;
+                    
+                }
+                #main-newstand footer {
+                    padding: 10px 1 11px;
+                }
+                #main-newstand header {
+                    font-size: 1.6rem;
+                    color: rgba(8,8,8, .5)
+
+                }
+                #main-newstand header.bold {
+                    font-weight: bold;
+                    color: black;
+                }
             </style>
             <main id="main">
                 <div id="main-left">
 
                     <aside id="main-left-ad"></aside>
-                    <section id="main-newstand"></section>
+                    <section id="main-newstand">
+                        <div>
+                            <header>
+                                <a href="#">뉴스스탠드</a>
+                                <a href="#">언론사편집</a>
+                                <a href="#">엔터</a>
+                                <a href="#">스포츠</a>
+                                <a href="#">경제</a>
+                            </header>
+                            <div>
+                                <div id="main-newstand-gray">
+                                    <a href="#" class="bold">전체언론사</a>
+                                    <a href="#">연합뉴스</a>
+                                    <a href="#">제로초 지금 배고파제로초 지금 배고파제로초 지금 배고파</a>    
+                                </div>
+                                <div>
+                                    <a href="#">뉴스스탠드</a>
+                                    <a href="#">뉴스홈</a>
+                                </div>
+                            </div>
+                            <div id="main-newstand-grid">
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div>언론사</div>
+                                <div></div>
+                            </div>
+
+                        </div>
+                        <footer>
+                            <button class="prev"><span class="blind">이전 페이지</span></button>
+                            <div class="text"><span class="news">언론사</span>&nbsp;&nbsp;더보기1<span class="total">/4</span></div>
+                            <button class="next"><span class="blind">다음 페이지</span></button>
+                            <button class="list"><span class="blind">목록보기</span></button>
+                            <button class="grid"><span class="blind">격자보기</span></button>
+                        </footer>
+                    </section>
                     <section id="main-shopping"></section>
                 </div>
                 <div id="main-right">
