--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -541,8 +541,6 @@
 
                 }
 
-
-
                 #main-login {
                     height: 164px;
                     padding: 21px 20px 18px;
@@ -622,6 +620,16 @@
                 #main-stock  {
                     height: 236px;
                 }
+
+                #main-newstand-gray {
+                    display: flex;
+                    justify-content: flex-start;
+                    height: 50px;
+                    padding: 12px 20px;
+                    background-color: var(--color_option_bg);
+                    border-radius: 4px;
+                }
+                
                 #main-newstand {
                     height: 426px;
                 }
@@ -634,8 +642,29 @@
 
                 #main-newstand a  :hover{
                     text-decoration: underline;
-                    
                 }
+                #main-newstand-grid {
+                    display: grid;
+                    justify-content: center;
+                    align-items: center;
+                    height: 224px;
+                    grid-gap: 1px;
+                    background-color: var(--color_border_in);
+                    grid-template-rows: repeat(4, 1fr);
+                    width: 790px;
+                    grid-template-columns: repeat(6, 1fr);
+                    border: 1px solid var(--color_border_in);
+                    border-radius: 4px;
+                    margin-top: 18px;
+                }
+                #main-newstand-grid div {
+                    height: 100%;
+                    background-color: white;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+
                 #main-newstand footer {
                     padding: 10px 1 11px;
                 }
@@ -674,12 +703,6 @@
                                 </div>
                             </div>
                             <div id="main-newstand-grid">
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
                                 <div>언론사</div>
                                 <div>언론사</div>
                                 <div>언론사</div>
