--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -628,8 +628,93 @@
                     padding: 12px 20px;
                     background-color: var(--color_option_bg);
                     border-radius: 4px;
+                    font-size: 1.4rem;
+                    line-height: 26px;
+
                 }
                 
+                #main-newstand-gray .left {
+                    flex: 1;
+                    display: flex;
+                }
+                #main-newstand-gray .left > a:first-of-type {
+                    width: 85.5px;
+                }
+                #main-newstand-gray .left > a:first-of-type::after {
+                    content: '';
+                    background-image: url('./sp_main.png');
+                    background-size: 463px 440px;
+                    background-position: -242px -184px;
+                    background-repeat: no-repeat;
+                    width: 9px;
+                    height: 6px;
+                    display: inline-block;
+                    margin: 10px 0 0 5px;
+                    vertical-align: 3px;
+                }
+                #main-newstand-animation {
+                    padding-left: 25px;
+                    position: relative;
+                    display: flex;
+                }
+                #main-newstand-animation::before {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    top: 7px;
+                    left: 12px;
+                    background-color: #d3d5d7;
+                    background-color: var(--color_dot_divider);
+                    width: 1px;
+                    height: 12px;
+                }
+                #main-newstand-animation a:first-of-type {
+                    position: relative;
+                    top: -1px;
+                    line-height: 26px;
+                }
+                #main-newstand-animation a:first-of-type::after {
+                    content: '';
+                    display: inline-block;
+                    width: 3px;
+                    height: 3px;
+                    background-color: #d3d5d7;
+                    background-color: var(--color_dot_divider);
+                    margin: 12px 6px 0 6px;
+                    border-radius: 50%;
+                    vertical-align: 5px;
+                }
+                #main-newstand-animation > a:last-of-type {
+                    text-overflow: ellipsis;
+                    width: 430px;
+                    white-space: nowrap;
+                    display: inline-block;
+                    overflow: hidden;
+                }
+                #main-newstand-gray .right {
+                    display: flex;
+                }
+                #main-newstand-gray .bold {
+                    font-weight: bold;
+                    padding-left: 25px;
+                    position: relative;
+                }
+                #main-newstand-gray .bold::before {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    top: 7px;
+                    left: 12px;
+                    width: 1px;
+                    height: 12px;
+                    background-color: #d3d5d7;
+                    background-color: var(--color_dot_divider);
+                }
+
+
+
+
+
                 #main-newstand {
                     height: 426px;
                 }
@@ -731,7 +816,7 @@
                             <button class="next"><span class="blind">다음 페이지</span></button>
                             <button class="list"><span class="blind">목록보기</span></button>
                             <button class="grid"><span class="blind">격자보기</span></button>
-                        </footer>
+                        </footer>                            
                     </section>
                     <section id="main-shopping"></section>
                 </div>
