--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -750,7 +750,9 @@
                     align-items: center;
                 }
 
-                #left-section footer {
+                .left-section footer {
+                    border-top: 1px solid var(--color_border_in);
+                    padding: 10px 0 11px;
                     font-size: 1.3rem;
                     line-height: 35px;
                     font-weight: 600;
@@ -801,7 +803,7 @@
                     height: 20px;
                 }
 
-                #left-section footer .prev, .left-section footer .next {
+                .left-section footer .prev, .left-section footer .next {
                     background: none;
                     border: none;
                     content: '';
@@ -820,11 +822,11 @@
                     align-items: center;
                 }
 
-                #left-section footer .prev::before {
+                .left-section footer .prev::before {
                     transform: rotate(180deg);
                 }
 
-                #left-section footer .prev::before, .left-section footer .next::before {
+                .left-section footer .prev::before, .left-section footer .next::before {
                 content: "";
                     display: block;
                     background-image: url(https://pm.pstatic.net/resources/asset/sp_main.30918f90.png);
@@ -835,11 +837,43 @@
                     height: 12px;
                 }
 
-                .left-section footer .text {
+                #left-section footer .text {
                     padding: 0 16px;
+                    min-width: 156px;
                 }
 
+                .left-section footer .hot{
+                    color: #9859f5;
+                }
 
+                .left-section footer .news{
+                    color: var(--color_news)
+                }
+
+                .left-section footer .total {
+                    color: rgba(96,96,96,.5);
+                }
+
+                #main-shopping {
+                    height: 560px;
+                    display: flex;
+                    flex-flow: column;
+                }
+                #main-shopping-top {
+                    padding-top: 19px;
+                }
+
+                #main-shopping footer .text {
+                    min-width: 176px;
+                }
+                #main-shopping-gray{
+                    display: flex;
+                }
+                #main-shopping-gray .left{
+                    width: 668px;
+                    padding: 15px 20px 14px;
+                    display: flex;
+                }
 
 
                 #main-newstand footer {
@@ -854,12 +888,18 @@
                     font-weight: bold;
                     color: black;
                 }
+
+                #main-shopping-gray .right{
+                    margin-left: auto;
+                    padding: 10px 0;
+                }
+
             </style>
             <main id="main">
                 <div id="main-left">
 
                     <aside id="main-left-ad"></aside>
-                    <section id="main-newstand">
+                    <section id="main-newstand" class="left-section">
                         <div>
                             <header>
                                 <a href="#">뉴스스탠드</a>
@@ -909,7 +949,37 @@
                             <button class="grid"><span class="blind">격자보기</span></button>
                         </footer>                            
                     </section>
-                    <section id="main-shopping"></section>
+                    <section id="main-shopping" class="left-section">
+                        <div id="main-shopping-top">
+                            <header>
+                                <a href="#" class="bold">쇼핑</a>
+                                <a href="#" class="slash">맨즈</a>
+                                <a href="#" class="slash">원쁠딜</a>
+                                <a href="#" class="slash">쇼핑라이브</a>
+                            </header>
+                            <div id="main-shopping-gray">
+                                <div class="left">
+                                    <a href="#">오늘의 혜택</a>
+                                    <div>
+                                        <a href="#">제로초 지금 배고파제로초 지금 배고파제로초 지금 배고파제로초 지금 배고파제로초 지금 배고파</a>
+                                    </div>
+                                </div>
+                                <div class="right">
+                                    <span>1</span>
+                                    <span>/18</span>
+                                    <button class="prev"><span class="blind">이전페이지</span></button>
+                                    <button class="next"><span class="blind">다음페이지</span></button>
+                                </div>
+                            </div>
+                            <div id="main-shopping-grid">
+                            </div>
+                            <footer>
+                                <button class="prev"><span class="blind">이전 페이지</span></button>
+                                <div class="text"><span class="hot">쇼핑핫아이템</span>&nbsp;더보기&nbsp;1<span class="total">/18</span></div>
+                                <button class="next"><span class="blind">다음 페이지</span></button>
+                            </footer>
+    
+                    </section>
                 </div>
                 <div id="main-right">
                     <section id="main-login">
